--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -57,7 +57,7 @@ reqwest-eventsource = "0.6.0"
 rustls = {version = "0.23.19", features = ["ring"]}
 serde = "1.0"
 serde-jsonlines = "0.5.0"
-serde_json = "1.0.105"
+serde_json = { version = "1.0.105", features = ["raw_value"] }
 sha3 = "0.10.8"
 sodiumoxide = "0.2.7"
 sqlx = {version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "json", "chrono", "bigdecimal"]}
