--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -69,7 +69,7 @@ tokio-stream = {version = "0.1", features = ["net"]}
 tokio-tungstenite = "0.24"
 url = "2.5.0"
 uuid = {version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
-zstd = "0.13.2"
+bincode = "1.3.3"
 
 [build-dependencies]
 tonic-build = "0.12.3"
