--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "@supabase/supabase-js": "^2.47.12",
     "@tanstack/react-table": "^8.20.6",
     "@types/lodash": "^4.17.15",
+    "@types/pako": "^2.0.3",
     "@uiw/codemirror-theme-github": "^4.23.7",
     "@uiw/codemirror-themes": "^4.23.7",
     "@uiw/react-codemirror": "^4.23.7",
@@ -82,6 +83,7 @@
     "next-auth": "^4.24.11",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
+    "pako": "^2.1.0",
     "postgres": "^3.4.5",
     "posthog-js": "^1.205.0",
     "posthog-node": "^4.3.2",
