feat: add api keys

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -84,6 +84,7 @@
     "js-tiktoken": "^1.0.16",
     "json-2-csv": "^5.5.7",
     "jsonwebtoken": "^9.0.2",
+    "libsodium-wrappers": "^0.7.15",
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "next": "^15.1.4",
@@ -129,6 +130,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/libsodium-wrappers": "^0.7.14",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
