--- a/docker-compose-local-dev.yml
+++ b/docker-compose-local-dev.yml
@@ -25,11 +25,8 @@ services:
       retries: 5
 
   clickhouse:
-    build:
-      context: ./clickhouse
+    image: clickhouse/clickhouse-server:latest
     container_name: clickhouse
-    ports:
-      - "8123:8123"
     volumes:
       - type: volume
         source: clickhouse-data
@@ -37,6 +34,14 @@ services:
       - type: volume
         source: clickhouse-logs
         target: /var/log/clickhouse-server/
+      - type: bind
+        source: ./clickhouse/config/users.xml
+        target: /etc/clickhouse-server/users.d/users.xml
+        read_only: true
+      - type: bind
+        source: ./clickhouse/001000-initial.sql
+        target: /docker-entrypoint-initdb.d/001000-initial.sql
+        read_only: true
     cap_add:
       - SYS_NICE
       - NET_ADMIN
