feat: ui fixes, list optimization

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -115,6 +115,7 @@
     "react-select": "^5.9.0",
     "react-syntax-highlighter": "^15.6.1",
     "react-textarea-autosize": "^8.5.7",
+    "react-virtualized": "^9.22.6",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.0",
     "resend": "^4.0.1",
@@ -138,6 +139,7 @@
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/react-virtualized": "^9.22.2",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
