feat: expose ports, uncomment, fix filter

--- a/docker-compose-full.yml
+++ b/docker-compose-full.yml
@@ -26,6 +26,8 @@ services:
   clickhouse:
     image: clickhouse/clickhouse-server:latest
     container_name: clickhouse
+    ports:
+      - "8123:8123"
     volumes:
       - type: volume
         source: clickhouse-data
