wip: still figuring out rabbit

--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -70,6 +70,7 @@ tokio-tungstenite = "0.24"
 url = "2.5.0"
 uuid = {version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
 deadpool = "0.12.2"
+enum_delegate = "0.2.0"
 
 [build-dependencies]
 tonic-build = "0.12.3"
