--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -34,6 +34,7 @@ csv = "1.3.0"
 dashmap = "5.5.3"
 deadpool = "0.12.2"
 dotenv = "0.15"
+enum_delegate = "0.2.0"
 enum_dispatch = "0.3.12"
 fancy-regex = "0.13.0"
 futures = "0.3"
