--- a/docker-compose-full.yml
+++ b/docker-compose-full.yml
@@ -1,5 +1,5 @@
 # This compose definition pulls the latest images from the GitHub Container Registry.
-# This is the best and fastest for self hosting, as the images are already built and ready to go.
+# This is the best and fastest for self-hosting, as the images are already built and ready to go.
 # If you want to build images locally, you can use the docker-compose-local-build.yml file instead.
 
 name: lmnr
@@ -26,8 +26,6 @@ services:
   clickhouse:
     image: clickhouse/clickhouse-server:latest
     container_name: clickhouse
-    ports:
-      - "8123:8123"
     volumes:
       - type: volume
         source: clickhouse-data
@@ -51,17 +49,16 @@ services:
       nofile:
         soft: 262144
         hard: 262144
-    
 
   semantic-search-service:
     image: ghcr.io/lmnr-ai/semantic-search-service
     depends_on:
       - qdrant
     environment:
-      - PORT=8080
-      - QDRANT_URL=http://qdrant:6334
-      - COHERE_ENDPOINT=https://api.cohere.ai/v1/embed
-      - COHERE_API_KEY=${COHERE_API_KEY}
+      PORT: 8080
+      QDRANT_URL: http://qdrant:6334
+      COHERE_ENDPOINT: https://api.cohere.ai/v1/embed
+      COHERE_API_KEY: ${COHERE_API_KEY}
     pull_policy: always
 
   python-executor:
@@ -98,17 +95,18 @@ services:
         condition: service_started
     pull_policy: always
     environment:
-      - PORT=8000
-      - GRPC_PORT=8001
-      - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
-      - SEMANTIC_SEARCH_URL=http://semantic-search-service:8080
-      - RABBITMQ_URL=amqp://${RABBITMQ_DEFAULT_USER}:${RABBITMQ_DEFAULT_PASS}@rabbitmq:5672/%2f
-      - CLICKHOUSE_URL=http://clickhouse:8123
-      - CLICKHOUSE_USER=${CLICKHOUSE_USER}
-      - CODE_EXECUTOR_URL=http://python-executor:8811
-      - SHARED_SECRET_TOKEN=${SHARED_SECRET_TOKEN}
-      - ENVIRONMENT=FULL
-      - AEAD_SECRET_KEY=${AEAD_SECRET_KEY}
+      PORT: 8000
+      GRPC_PORT: 8001
+      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+      SEMANTIC_SEARCH_URL: http://semantic-search-service:8080
+      RABBITMQ_URL: amqp://${RABBITMQ_DEFAULT_USER}:${RABBITMQ_DEFAULT_PASS}@rabbitmq:5672/%2f
+      CLICKHOUSE_URL: http://clickhouse:8123
+      CLICKHOUSE_USER: ${CLICKHOUSE_USER}
+      CODE_EXECUTOR_URL: http://python-executor:8811
+      SHARED_SECRET_TOKEN: ${SHARED_SECRET_TOKEN}
+      ENVIRONMENT: FULL
+      AEAD_SECRET_KEY: ${AEAD_SECRET_KEY}
+
   frontend:
     image: ghcr.io/lmnr-ai/frontend
     ports:
@@ -120,16 +118,16 @@ services:
       clickhouse:
         condition: service_started
     environment:
-      - PORT=5667
-      - BACKEND_URL=http://app-server:8000
-      - SHARED_SECRET_TOKEN=${SHARED_SECRET_TOKEN}
-      - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
-      - NEXTAUTH_URL=http://localhost:5667
-      - NEXTAUTH_SECRET=some_secret
-      - NEXT_PUBLIC_URL=http://localhost:5667
-      - ENVIRONMENT=FULL
-      - CLICKHOUSE_URL=http://clickhouse:8123
-      - CLICKHOUSE_USER=${CLICKHOUSE_USER}
+      PORT: 5667
+      BACKEND_URL: http://app-server:8000
+      SHARED_SECRET_TOKEN: ${SHARED_SECRET_TOKEN}
+      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+      NEXTAUTH_URL: http://localhost:5667
+      NEXTAUTH_SECRET: some_secret
+      NEXT_PUBLIC_URL: http://localhost:5667
+      ENVIRONMENT: FULL
+      CLICKHOUSE_URL: http://clickhouse:8123
+      CLICKHOUSE_USER: ${CLICKHOUSE_USER}
 
 volumes:
   qdrant-data:
