add steps limits (#455)
* control

* add cookies, write timestamp, skip serializing state

* write action_result to db on assistant messages

* minor: changed actionResult key to camelCase

* fix to stream cancelling when leaving page

* trace_id and session_id

* separate table for agent_chats

* cancel agent session

* trace cancel session

* fixes to cancel

* fix

* add steps limits

* add step count, fix frontent build

* updates to trace_id proto

* user id and stop session

---------

Co-authored-by: Robert Kim <skull8888888@gmail.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -142,7 +142,7 @@
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
     "autoprefixer": "^10.4.21",
-    "drizzle-kit": "^0.30.5",
+    "drizzle-kit": "^0.30.6",
     "eslint": "^9.22.0",
     "eslint-config-love": "^112.0.0",
     "eslint-config-next": "^15.2.1",
