docker-compose. TODO: test after releasing changes

--- a/app-server/.env.example
+++ b/app-server/.env.example
@@ -1,4 +1,6 @@
 SEMANTIC_SEARCH_URL=http://localhost:8080
+AGENT_MANAGER_URL=http://localhost:8901
+
 # postgres://user:password@host:port/dbname
 DATABASE_URL="postgres://postgres:postgres_passwordabc@localhost:5433/postgres"
 
@@ -19,4 +21,3 @@ ENVIRONMENT=FULL
 # Optional, if you want to use Redis for caching. Create a Redis/Valkey instance and set the URL here.
 # REDIS_URL=redis://localhost:6379
 
-# AGENT_MANAGER_URL=http://localhost:8901
