--- a/agent-manager/.env.example
+++ b/agent-manager/.env.example
@@ -4,3 +4,4 @@ PORT=8901
 BACKEND_URL=http://app-server
 BACKEND_HTTP_PORT=8000
 BACKEND_GRPC_PORT=8001
+DATABASE_URL="postgres://postgres:postgres_passwordabc@localhost:5433/postgres"
