--- a/docker-compose-full.yml
+++ b/docker-compose-full.yml
@@ -84,6 +84,9 @@ services:
     pull_policy: always
     ports:
       - "8901:8901"
+    depends_on:
+      postgres:
+        condition: service_healthy
     environment:
       PORT: 8901
       ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY}
@@ -91,6 +94,7 @@ services:
       BACKEND_URL: http://app-server
       BACKEND_HTTP_PORT: 8000
       BACKEND_GRPC_PORT: 8001
+      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
 
   app-server:
     image: ghcr.io/lmnr-ai/app-server
