--- a/docker-compose-local-build.yml
+++ b/docker-compose-local-build.yml
@@ -79,6 +79,9 @@ services:
     build:
       context: ./agent-manager
       dockerfile: Dockerfile
+    depends_on:
+      postgres:
+        condition: service_healthy
     ports:
       - "8901:8901"
     environment:
@@ -88,6 +91,7 @@ services:
       BACKEND_URL: http://app-server
       BACKEND_HTTP_PORT: 8000
       BACKEND_GRPC_PORT: 8001
+      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
 
   app-server:
     ports:
