--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 # This compose file is a lightweight version of docker-compose-full.yml.
 # It is intended to be used for local quickstarts.
-# It does not include ClickHouse,
-# Qdrant, Semantic Search, Python executor, and RabbitMQ.
-# It only includes frontend, postgres, and app-server.
+# It does not include Qdrant, Semantic Search, Python executor, and RabbitMQ.
+# It only includes frontend, clickhouse, postgres, and app-server.
 
 name: lmnr
 
@@ -69,6 +68,9 @@ services:
     pull_policy: always
     ports:
       - "8901:8901"
+    depends_on:
+      postgres:
+        condition: service_healthy
     environment:
       PORT: 8901
       ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY}
@@ -76,6 +78,7 @@ services:
       BACKEND_URL: http://app-server
       BACKEND_HTTP_PORT: 8000
       BACKEND_GRPC_PORT: 8001
+      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
 
   app-server:
     image: ghcr.io/lmnr-ai/app-server
