--- a/docker-compose-local-build.yml
+++ b/docker-compose-local-build.yml
@@ -92,6 +92,11 @@ services:
       BACKEND_HTTP_PORT: 8000
       BACKEND_GRPC_PORT: 8001
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+    healthcheck:
+      test: ["CMD", "sleep", "5"]
+      interval: 10s
+      timeout: 5s
+      retries: 1
 
   app-server:
     ports:
@@ -114,7 +119,7 @@ services:
       python-executor:
         condition: service_started
       agent-manager:
-        condition: service_started
+        condition: service_healthy
     environment:
       PORT: 8000
       GRPC_PORT: 8001
@@ -146,6 +151,7 @@ services:
       ENVIRONMENT: FULL
       CLICKHOUSE_URL: http://clickhouse:8123
       CLICKHOUSE_USER: ${CLICKHOUSE_USER}
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
 
 volumes:
   qdrant-data:
