--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,7 @@ services:
       ENVIRONMENT: LITE # this disables some runtime dependencies
       CLICKHOUSE_URL: http://clickhouse:8123
       CLICKHOUSE_USER: ${CLICKHOUSE_USER}
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
 
   agent-manager:
     image: ghcr.io/lmnr-ai/agent-manager
@@ -79,6 +80,12 @@ services:
       BACKEND_HTTP_PORT: 8000
       BACKEND_GRPC_PORT: 8001
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+    healthcheck:
+      # naive sleep to ensure agent-manager is ready
+      test: ["CMD", "sleep", "3"]
+      interval: 3s
+      timeout: 5s
+      retries: 1
 
   app-server:
     image: ghcr.io/lmnr-ai/app-server
@@ -92,7 +99,7 @@ services:
       clickhouse:
         condition: service_started
       agent-manager:
-        condition: service_started
+        condition: service_healthy
     environment:
       PORT: 8000
       GRPC_PORT: 8001
