--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 # This compose file is a lightweight version of docker-compose-full.yml.
 # It is intended to be used for local quickstarts.
-# It does not include Qdrant, Semantic Search, Python executor, and RabbitMQ.
+# It does not include RabbitMQ.
 # It only includes frontend, clickhouse, postgres, and app-server.
 
 name: lmnr
@@ -111,7 +111,7 @@ services:
       SHARED_SECRET_TOKEN: ${SHARED_SECRET_TOKEN}
       CLICKHOUSE_URL: http://clickhouse:8123
       CLICKHOUSE_USER: ${CLICKHOUSE_USER}
-      ENVIRONMENT: LITE # this disables runtime dependency on rabbitmq, semantic search, and python executor
+      ENVIRONMENT: LITE # this disables runtime dependency on rabbitmq
       AEAD_SECRET_KEY: ${AEAD_SECRET_KEY}
 
 volumes:
