feat: add virtualization WIP

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -114,6 +114,7 @@
     "react-select": "^5.10.1",
     "react-syntax-highlighter": "^15.6.1",
     "react-textarea-autosize": "^8.5.9",
+    "react-virtualized": "^9.22.6",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.3",
     "resend": "^4.3.0",
@@ -137,6 +138,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/react-virtualized": "^9.22.2",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
