--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,8 @@ services:
       PORT: 8901
       ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY}
       SCRAPYBARA_API_KEY: ${SCRAPYBARA_API_KEY}
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+      GEMINI_API_KEY: ${GEMINI_API_KEY}
       BACKEND_URL: http://app-server
       BACKEND_HTTP_PORT: 8000
       BACKEND_GRPC_PORT: 8001
