--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,6 +80,7 @@
     "focus-trap-react": "^10.3.1",
     "framer-motion": "^11.18.2",
     "gray-matter": "^4.0.3",
+    "hast-util-to-jsx-runtime": "^2.3.6",
     "i": "^0.3.7",
     "ioredis": "^5.6.1",
     "js-base64": "^3.7.7",
@@ -156,6 +157,7 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
+    "shiki": "^3.3.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
