--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -7,19 +7,19 @@ on:
       - opened
       - reopened
     paths:
-      - 'app-server/**'
+      - "app-server/**"
 
 jobs:
-  build-push:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-             
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
+
       - name: Cache Docker layers
         uses: actions/cache@v4
         with:
