--- a/frontend/package.json
+++ b/frontend/package.json
@@ -97,6 +97,7 @@
     "react-dom": "^19.1.0",
     "react-github-btn": "^1.4.0",
     "react-hook-form": "^7.56.0",
+    "react-hotkeys-hook": "^5.0.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^9.1.0",
