--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@ai-sdk/groq": "^1.2.8",
     "@ai-sdk/mistral": "^1.2.7",
     "@ai-sdk/openai": "^1.3.16",
+    "@ai-sdk/provider": "^1.1.3",
     "@ai-sdk/react": "^1.2.9",
     "@aws-sdk/client-s3": "^3.787.0",
     "@clickhouse/client": "^1.11.1",
