--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@ai-sdk/groq": "^1.2.8",
     "@ai-sdk/mistral": "^1.2.7",
     "@ai-sdk/openai": "^1.3.16",
+    "@ai-sdk/provider": "^1.1.3",
     "@ai-sdk/react": "^1.2.9",
     "@aws-sdk/client-s3": "^3.787.0",
     "@clickhouse/client": "^1.11.1",
@@ -97,6 +98,7 @@
     "react-dom": "^19.1.0",
     "react-github-btn": "^1.4.0",
     "react-hook-form": "^7.56.0",
+    "react-hotkeys-hook": "^5.0.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^9.1.0",
