--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -55,6 +55,7 @@ tokio-tungstenite = "0.26"
 tonic = {version = "0.13", features = ["gzip"]}
 url = "2.5.4"
 uuid = {version = "1.16.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
+reqwest = { version = "0.12.15", features = ["json"] }
 
 [build-dependencies]
 tonic-build = "0.13"
