remove clickhouse dir, add clickhouse password auth

--- a/app-server/.env.example
+++ b/app-server/.env.example
@@ -9,7 +9,8 @@ GRPC_PORT=8001
 RABBITMQ_URL=amqp://admin:adminpasswd@localhost:5672/%2f
 
 CLICKHOUSE_URL=http://localhost:8123
-CLICKHOUSE_USER=default
+CLICKHOUSE_USER=ch_user
+CLICKHOUSE_PASSWORD=ch_passwd
 
 SHARED_SECRET_TOKEN=some_secret
 # must be exactly 32 bytes (64 hex characters)
