--- a/docker-compose-local-dev-full.yml
+++ b/docker-compose-local-dev-full.yml
@@ -29,14 +29,9 @@ services:
       - type: volume
         source: clickhouse-logs
         target: /var/log/clickhouse-server/
-      - type: bind
-        source: ./clickhouse/config/users.xml
-        target: /etc/clickhouse-server/users.d/users.xml
-        read_only: true
-      - type: bind
-        source: ./clickhouse/001000-initial.sql
-        target: /docker-entrypoint-initdb.d/001000-initial.sql
-        read_only: true
+    environment:
+      CLICKHOUSE_USER: ${CLICKHOUSE_USER}
+      CLICKHOUSE_PASSWORD: ${CLICKHOUSE_PASSWORD}
     cap_add:
       - SYS_NICE
       - NET_ADMIN
