feat: langgraph WIP

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,6 +69,7 @@
     "@uiw/codemirror-theme-github": "^4.23.10",
     "@uiw/codemirror-themes": "^4.23.10",
     "@uiw/react-codemirror": "^4.23.10",
+    "@xyflow/react": "^12.6.4",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
