Provider format: openai (#621)
* wip: parse openai output tool calls

* fix frontend lint

* try reusing build for tests

* feat: parse openai messages WIP

* feat: standardize to core messages in spans, parsing on span input, output

* feat: add parsing messages to playground

* restore frontend changes

* fix: don't convert aisdk spans (for now)

* feat: aria label

* feat: add export/push span endpoints, fix image url

* feat: fix tools count

* feat: remove parsing, dont omit type

---------

Co-authored-by: Olzhas Nurpeisov <olzhik1123@gmail.com>

--- a/.github/workflows/backend-build-and-test.yml
+++ b/.github/workflows/backend-build-and-test.yml
@@ -1,4 +1,4 @@
-name: Backend build
+name: Backend build and test
 
 on:
   pull_request:
@@ -16,7 +16,7 @@ on:
       - "app-server/Cargo.toml"
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -42,3 +42,11 @@ jobs:
           platforms: linux/amd64
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
+          target: builder
+          tags: app-server-test:latest
+          load: true
+
+      - name: Run tests inside container
+        run: |
+          echo "Running tests inside Docker container..."
+          docker run --rm -t app-server-test:latest cargo test -- --nocapture
