--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -43,7 +43,7 @@ regex = "1.11.1"
 rustls = {version = "0.23", features = ["ring"]}
 serde = "1.0"
 serde-jsonlines = "0.7.0"
-serde_json = {version = "1.0.140", features = ["raw_value"]}
+serde_json = { version = "1.0.140", features = ["preserve_order", "raw_value"] }
 sha3 = "0.10.8"
 sodiumoxide = "0.2.7"
 sqlx = {version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "json", "chrono", "bigdecimal"]}
@@ -57,6 +57,7 @@ url = "2.5.4"
 uuid = {version = "1.16.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
 reqwest = { version = "0.12.15", features = ["json"] }
 itertools = "0.14.0"
+indexmap = { version = "2.9.0", features = ["serde"] }
 
 [build-dependencies]
 tonic-build = "0.13"
