--- a/docker-compose-full.yml
+++ b/docker-compose-full.yml
@@ -128,6 +128,7 @@ services:
       CLICKHOUSE_USER: ${CLICKHOUSE_USER}
       CLICKHOUSE_PASSWORD: ${CLICKHOUSE_PASSWORD}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
+      AEAD_SECRET_KEY: ${AEAD_SECRET_KEY}
 
 volumes:
   clickhouse-data:
