--- a/frontend/package.json
+++ b/frontend/package.json
@@ -76,11 +76,13 @@
     "cmdk": "^1.1.1",
     "dagre": "^0.8.5",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.2.6",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.41.0",
     "eventsource-parser": "^2.0.1",
     "framer-motion": "^11.18.2",
     "gray-matter": "^4.0.3",
+    "handlebars": "^4.7.8",
     "ioredis": "^5.6.1",
     "json-2-csv": "^5.5.9",
     "jsonwebtoken": "^9.0.2",
