--- a/frontend/package.json
+++ b/frontend/package.json
@@ -123,6 +123,7 @@
     "zustand": "^4.5.6"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/typography": "^0.5.16",
     "@types/dagre": "^0.7.52",
     "@types/jsonwebtoken": "^9.0.9",
@@ -146,6 +147,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "jiti": "^2.4.2",
     "postcss": "^8.5.3",
     "prettier": "^3.6.2",
     "tailwind-merge": "^2.6.0",
