--- a/frontend/package.json
+++ b/frontend/package.json
@@ -94,6 +94,7 @@
     "next-mdx-remote": "^5.0.0",
     "node-sql-parser": "^5.3.9",
     "pako": "^2.1.0",
+    "papaparse": "^5.5.3",
     "postgres": "^3.4.5",
     "posthog-js": "^1.236.5",
     "posthog-node": "^4.13.0",
@@ -129,6 +130,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/libsodium-wrappers": "^0.7.14",
     "@types/node": "^22.14.1",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-syntax-highlighter": "^15.5.13",
