--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@ai-sdk/react": "^1.2.9",
     "@aws-sdk/client-s3": "^3.787.0",
     "@clickhouse/client": "^1.11.1",
+    "@codemirror/autocomplete": "^6.18.6",
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/lang-json": "^6.0.2",
