--- a/app-server/.env.example
+++ b/app-server/.env.example
@@ -20,3 +20,5 @@ ENVIRONMENT=FULL
 # Optional, if you want to use Redis for caching. Create a Redis/Valkey instance and set the URL here.
 # REDIS_URL=redis://localhost:6379
 
+
+QUERY_ENGINE_URL=
