--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@ai-sdk/react": "^1.2.9",
     "@aws-sdk/client-s3": "^3.787.0",
     "@clickhouse/client": "^1.11.1",
+    "@codemirror/autocomplete": "^6.18.6",
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/lang-json": "^6.0.2",
@@ -38,6 +39,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.0.1",
+    "@lezer/highlight": "^1.2.1",
     "@novnc/novnc": "1.5.0",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
@@ -67,7 +69,6 @@
     "@tanstack/react-virtual": "^3.13.6",
     "@types/lodash": "^4.17.16",
     "@types/pako": "^2.0.3",
-    "@uiw/codemirror-theme-github": "^4.23.10",
     "@uiw/codemirror-themes": "^4.23.10",
     "@uiw/react-codemirror": "^4.23.10",
     "@vercel/otel": "^1.13.0",
@@ -125,6 +126,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@next/eslint-plugin-next": "^15.4.2",
     "@tailwindcss/typography": "^0.5.16",
     "@types/dagre": "^0.7.52",
     "@types/jsonwebtoken": "^9.0.9",
@@ -146,6 +148,7 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "eslint-plugin-unused-imports": "^4.1.4",
