--- a/frontend/package.json
+++ b/frontend/package.json
@@ -103,6 +103,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "react-github-btn": "^1.4.0",
+    "react-grid-layout": "^1.5.2",
     "react-hook-form": "^7.56.0",
     "react-hotkeys-hook": "^5.0.1",
     "react-intersection-observer": "^9.16.0",
@@ -134,6 +135,7 @@
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-grid-layout": "^1.3.5",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
