query engine for self-hosted

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -20,6 +20,9 @@ jobs:
           - dockerfile: ./frontend/Dockerfile
             context: ./frontend
             image: ghcr.io/lmnr-ai/frontend
+          - dockerfile: ./query-engine/Dockerfile
+            context: ./query-engine
+            image: ghcr.io/lmnr-ai/query-engine
     permissions:
       contents: read
       packages: write
