--- a/app-server/.env.example
+++ b/app-server/.env.example
@@ -9,6 +9,8 @@ RABBITMQ_URL=amqp://admin:adminpasswd@localhost:5672/%2f
 CLICKHOUSE_URL=http://localhost:8123
 CLICKHOUSE_USER=ch_user
 CLICKHOUSE_PASSWORD=ch_passwd
+CLICKHOUSE_RO_USER=ch_user
+CLICKHOUSE_RO_PASSWORD=ch_passwd
 
 SHARED_SECRET_TOKEN=some_secret
 # must be exactly 32 bytes (64 hex characters)
@@ -18,5 +20,4 @@ ENVIRONMENT=FULL
 # Optional, if you want to use Redis for caching. Create a Redis/Valkey instance and set the URL here.
 # REDIS_URL=redis://localhost:6379
 
-
-QUERY_ENGINE_URL=
+QUERY_ENGINE_URL=http://localhost:8903
