--- a/docker-compose-local-dev.yml
+++ b/docker-compose-local-dev.yml
@@ -51,6 +51,19 @@ services:
       nofile:
         soft: 262144
         hard: 262144
+    
+  query-engine:
+    image: ghcr.io/lmnr-ai/query-engine
+    pull_policy: always
+    ports:
+      - "${QUERY_ENGINE_HOST_PORT:-8903}:8903"
+    environment:
+      PORT: 8903
+    healthcheck:
+      test: ["CMD", "sleep", "5"]
+      interval: 10s
+      timeout: 6s
+      retries: 1
 
   app-server:
     image: ghcr.io/lmnr-ai/app-server
@@ -63,6 +76,8 @@ services:
         condition: service_healthy
       clickhouse:
         condition: service_started
+      query-engine:
+        condition: service_healthy
 
     environment:
       PORT: 8000
@@ -72,8 +87,11 @@ services:
       CLICKHOUSE_URL: http://clickhouse:8123
       CLICKHOUSE_USER: ${CLICKHOUSE_USER}
       CLICKHOUSE_PASSWORD: ${CLICKHOUSE_PASSWORD}
+      CLICKHOUSE_RO_USER: ${CLICKHOUSE_RO_USER}
+      CLICKHOUSE_RO_PASSWORD: ${CLICKHOUSE_RO_PASSWORD}
       ENVIRONMENT: LITE # this disables runtime dependency on rabbitmq
       AEAD_SECRET_KEY: ${AEAD_SECRET_KEY}
+      QUERY_ENGINE_URL: http://query-engine:${QUERY_ENGINE_HOST_PORT:-8903}
 
 volumes:
   postgres-data:
