--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -91,7 +91,7 @@
     "libsodium-wrappers": "^0.7.15",
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
-    "next": "^15.4.7",
+    "next": "~15.5.2",
     "next-auth": "^4.24.11",
     "next-mdx-remote": "^5.0.0",
     "pako": "^2.1.0",
@@ -127,7 +127,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@next/eslint-plugin-next": "^15.4.7",
+    "@next/eslint-plugin-next": "~15.5.2",
     "@tailwindcss/typography": "^0.5.16",
     "@types/dagre": "^0.7.53",
     "@types/jsonwebtoken": "^9.0.10",
@@ -145,7 +145,7 @@
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.33.0",
     "eslint-config-love": "^121.0.0",
-    "eslint-config-next": "^15.4.7",
+    "eslint-config-next": "~15.5.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-node": "^11.1.0",
