--- a/frontend/package.json
+++ b/frontend/package.json
@@ -119,8 +119,11 @@
     "rrweb": "2.0.0-alpha.18",
     "rrweb-player": "2.0.0-alpha.18",
     "sharp": "^0.33.5",
+    "shiki": "^3.12.2",
+    "streamdown": "^1.2.0",
     "stripe": "^16.12.0",
     "swr": "^2.3.3",
+    "use-stick-to-bottom": "^1.1.1",
     "uuid": "^9.0.1",
     "yaml": "^2.7.1",
     "zod": "^4.1.5",
