--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,14 +15,14 @@
     "test": "tsx --test tests/**/*.test.ts"
   },
   "dependencies": {
-    "@ai-sdk/amazon-bedrock": "^2.2.12",
-    "@ai-sdk/anthropic": "^1.2.12",
-    "@ai-sdk/azure": "^1.3.25",
+    "@ai-sdk/amazon-bedrock": "^3.0.17",
+    "@ai-sdk/anthropic": "^2.0.13",
+    "@ai-sdk/azure": "^2.0.26",
     "@ai-sdk/google": "^2.0.11",
     "@ai-sdk/openai": "^2.0.23",
-    "@ai-sdk/groq": "^1.2.9",
-    "@ai-sdk/mistral": "^1.2.8",
-    "@ai-sdk/provider": "^1.1.3",
+    "@ai-sdk/groq": "^2.0.17",
+    "@ai-sdk/mistral": "^2.0.13",
+    "@ai-sdk/provider": "2.0.0",
     "@ai-sdk/react": "^2.0.29",
     "@aws-sdk/client-s3": "^3.864.0",
     "@clickhouse/client": "^1.12.1",
