--- a/frontend/package.json
+++ b/frontend/package.json
@@ -166,6 +166,6 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.4",
-    "typescript": "^5.8.3"
+    "typescript": "5.8.3"
   }
 }
