feat: add controllable posthog

--- a/docker-compose-full.yml
+++ b/docker-compose-full.yml
@@ -105,6 +105,7 @@ services:
       CLICKHOUSE_PASSWORD: ${CLICKHOUSE_PASSWORD}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       AEAD_SECRET_KEY: ${AEAD_SECRET_KEY}
+      NEXT_PUBLIC_ENABLE_TELEMETRY: ${NEXT_PUBLIC_ENABLE_TELEMETRY}
 
 volumes:
   clickhouse-data:
