--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,7 @@ services:
       CLICKHOUSE_PASSWORD: ${CLICKHOUSE_PASSWORD}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       AEAD_SECRET_KEY: ${AEAD_SECRET_KEY}
+      NEXT_PUBLIC_ENABLE_TELEMETRY: ${NEXT_PUBLIC_ENABLE_TELEMETRY}
 
   app-server:
     image: ghcr.io/lmnr-ai/app-server
