--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,15 +15,15 @@
     "test": "tsx --test tests/**/*.test.ts"
   },
   "dependencies": {
-    "@ai-sdk/amazon-bedrock": "^2.2.12",
-    "@ai-sdk/anthropic": "^1.2.12",
-    "@ai-sdk/azure": "^1.3.25",
-    "@ai-sdk/google": "^1.2.22",
-    "@ai-sdk/groq": "^1.2.9",
-    "@ai-sdk/mistral": "^1.2.8",
-    "@ai-sdk/openai": "^1.3.24",
-    "@ai-sdk/provider": "^1.1.3",
-    "@ai-sdk/react": "^1.2.12",
+    "@ai-sdk/amazon-bedrock": "^3.0.17",
+    "@ai-sdk/anthropic": "^2.0.13",
+    "@ai-sdk/azure": "^2.0.26",
+    "@ai-sdk/google": "^2.0.11",
+    "@ai-sdk/openai": "^2.0.23",
+    "@ai-sdk/groq": "^2.0.17",
+    "@ai-sdk/mistral": "^2.0.13",
+    "@ai-sdk/provider": "2.0.0",
+    "@ai-sdk/react": "^2.0.29",
     "@aws-sdk/client-s3": "^3.864.0",
     "@clickhouse/client": "^1.12.1",
     "@codemirror/autocomplete": "^6.18.6",
@@ -34,12 +34,14 @@
     "@codemirror/lang-sql": "^6.9.1",
     "@codemirror/lang-yaml": "^6.1.2",
     "@codemirror/language": "^6.11.3",
+    "@codemirror/search": "^6.5.11",
     "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.38.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.1",
     "@lezer/highlight": "^1.2.1",
+    "@lmnr-ai/lmnr": "^0.7.1",
     "@mux/mux-player-react": "^3.5.3",
     "@novnc/novnc": "1.5.0",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -73,8 +75,8 @@
     "@uiw/codemirror-themes": "^4.25.1",
     "@uiw/react-codemirror": "^4.25.1",
     "@vercel/otel": "^1.13.0",
+    "ai": "5.0.28",
     "@xyflow/react": "^12.8.3",
-    "ai": "^4.3.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -118,11 +120,14 @@
     "rrweb": "2.0.0-alpha.18",
     "rrweb-player": "2.0.0-alpha.18",
     "sharp": "^0.33.5",
+    "shiki": "^3.12.2",
+    "streamdown": "^1.2.0",
     "stripe": "^16.12.0",
+    "use-stick-to-bottom": "^1.1.1",
+    "zod": "^4.1.5",
     "swr": "^2.3.6",
     "uuid": "^9.0.1",
     "yaml": "^2.8.1",
-    "zod": "^3.25.76",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
@@ -161,6 +166,6 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.4",
-    "typescript": "^5.8.3"
+    "typescript": "5.8.3"
   }
 }
