--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,7 +65,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "^0.3.3",
     "@react-email/tailwind": "^1.2.2",
-    "@supabase/supabase-js": "^2.55.0",
+    "@supabase/supabase-js": "2.49.4",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.12",
     "@types/lodash": "^4.17.20",
