--- a/docker-compose-full.yml
+++ b/docker-compose-full.yml
@@ -7,6 +7,7 @@ name: lmnr
 services:
   rabbitmq:
     image: rabbitmq
+    pull_policy: always
     environment:
       RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
       RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
@@ -18,6 +19,7 @@ services:
 
   clickhouse:
     image: clickhouse/clickhouse-server:latest
+    pull_policy: always
     container_name: clickhouse
     volumes:
       - type: volume
@@ -43,6 +45,7 @@ services:
 
   postgres:
     image: postgres:16
+    pull_policy: always
     volumes:
       - postgres-data:/var/lib/postgresql/data
     environment:
