--- a/docker-compose-full.yml
+++ b/docker-compose-full.yml
@@ -100,7 +100,7 @@ services:
       SHARED_SECRET_TOKEN: ${SHARED_SECRET_TOKEN}
       ENVIRONMENT: FULL
       AEAD_SECRET_KEY: ${AEAD_SECRET_KEY}
-      QUERY_ENGINE_URL: http://query-engine:${QUERY_ENGINE_HOST_PORT:-8903}
+      QUERY_ENGINE_URL: http://query-engine:8903
 
   frontend:
     image: ghcr.io/lmnr-ai/frontend
