--- a/docker-compose-local-dev.yml
+++ b/docker-compose-local-dev.yml
@@ -91,7 +91,7 @@ services:
       CLICKHOUSE_RO_PASSWORD: ${CLICKHOUSE_RO_PASSWORD}
       ENVIRONMENT: LITE # this disables runtime dependency on rabbitmq
       AEAD_SECRET_KEY: ${AEAD_SECRET_KEY}
-      QUERY_ENGINE_URL: http://query-engine:${QUERY_ENGINE_HOST_PORT:-8903}
+      QUERY_ENGINE_URL: http://query-engine:8903
 
 volumes:
   postgres-data:
